--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ php:
 
 env:
   matrix:
-    - DB=mysql ECCUBE_DB_USERNAME=root ECCUBE_DB_PASSWORD=password ECCUBE_DB_PORT=3307
+    - DB=mysql ECCUBE_DB_USERNAME=root ECCUBE_DB_PASSWORD=password ECCUBE_DB_PORT=3307 ECCUBE_DB_CHARASET=utf8mb ECCUBE_DB_COLLATE=utf8mb4_unicode_ci
     - DB=pgsql ECCUBE_DB_USERNAME=postgres ECCUBE_DB_PASSWORD=password
     - DB=sqlite
     # カバレッジレポート用
