use mysql8 on docker 文字コードにutf8mb4を指定

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ php:
 
 env:
   matrix:
-    - DB=mysql ECCUBE_DB_USERNAME=root ECCUBE_DB_PASSWORD=password ECCUBE_DB_PORT=3307 ECCUBE_DB_CHARASET=utf8mb ECCUBE_DB_COLLATE=utf8mb4_unicode_ci
+    - DB=mysql ECCUBE_DB_USERNAME=root ECCUBE_DB_PASSWORD=password ECCUBE_DB_PORT=3307 ECCUBE_DB_CHARASET=utf8mb4 ECCUBE_DB_COLLATE=utf8mb4_0900_ai_ci
     - DB=pgsql ECCUBE_DB_USERNAME=postgres ECCUBE_DB_PASSWORD=password
     - DB=sqlite
     # カバレッジレポート用
@@ -57,7 +57,7 @@ install:
 before_script:
   - phpenv config-rm xdebug.ini || true
   - echo "memory_limit=-1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
-  - if [ $DB == "mysql" ]; then docker run --name container_mysql -e MYSQL_ROOT_PASSWORD=password  -d -p 3307:3306 mysql:8 ; fi
+  - if [ $DB == "mysql" ]; then docker run --name container_mysql -e MYSQL_ROOT_PASSWORD=password -d -p 3307:3306 mysql:8 --character-set-server=utf8mb4 --collation-server=utf8mb4_0900_ai_ci; fi
   - composer install --dev --no-interaction -o
   - php ./eccube_install.php $DB none
   - mailcatcher
