--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ php:
 #  - 7.0
 
 env:
+  - REVIEWDOG_VERSION=0.9.8
   matrix:
     - DB=mysql DATABASE_URL=mysql://root:@localhost/cube4_dev DATABASE_SERVER_VERSION=5
     - DB=pgsql DATABASE_URL=postgres://postgres:password@localhost/cube4_dev DATABASE_SERVER_VERSION=9
