--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,11 @@ install:
 
 jobs:
   include:
+    - stage: Static Analysis
+      env:
+        - DB=mysql DATABASE_URL=mysql://root:@localhost/cube4_dev DATABASE_SERVER_VERSION=5
+      script:
+        - vendor/bin/phpstan analyse src/Eccube
     - stage: Unit Test
       env:
         - DB=mysql DATABASE_URL=mysql://root:@localhost/cube4_dev DATABASE_SERVER_VERSION=5
