--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ jobs:
       env:
         - DB=mysql DATABASE_URL=mysql://root:@localhost/cube4_dev DATABASE_SERVER_VERSION=5
       script:
-        - vendor/bin/phpstan analyse src/Eccube
+        - vendor/bin/phpstan analyse src/Eccube -l 0 --no-interaction --no-progress
     - stage: Unit Test
       env:
         - DB=mysql DATABASE_URL=mysql://root:@localhost/cube4_dev DATABASE_SERVER_VERSION=5
