--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ jobs:
       env:
         - DB=mysql DATABASE_URL=mysql://root:@localhost/cube4_dev DATABASE_SERVER_VERSION=5
       script:
-        - vendor/bin/phpstan analyse src/Eccube -l 0 --no-interaction --no-progress
+        - vendor/bin/phpstan analyse -c phpstan.neon src/Eccube -l 0 --no-interaction --no-progress
     - stage: Unit Test
       before_install:
         ## see https://github.com/symfony/symfony/blob/e0bdc0c35e9afdb3bee8af172f90e9648c4012fc/.travis.yml#L92-L97
