--- a/.travis.yml
+++ b/.travis.yml
@@ -65,8 +65,7 @@ jobs:
     - env: GROUP=front APP_ENV=codeception DB=pgsql DATABASE_URL=postgres://postgres:password@localhost/eccube_db DATABASE_SERVER_VERSION=9 MAILER_URL=smtp://localhost:1025
       script: ./codeception.sh -g ${GROUP}
   allow_failures:
-    - stage: Static Analysis
-      env:
+    - env:
         - DB=pgsql DATABASE_URL=postgres://postgres:password@localhost/cube4_dev DATABASE_SERVER_VERSION=9
       script:
         - vendor/bin/phpstan analyse src/Eccube -l 0 --no-interaction --no-progress
