--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ composer.phar
 !/app/log/.gitkeep
 /app/Plugin/*
 !/app/Plugin/.gitkeep
+!/app/Plugin/LinkPayment
 !/app/Plugin/ExamplePlugin
 /app/template/*
 !/app/template/admin
